Fix header and footer spacings

--- a/src/assets/stylesheets/components/_footer.scss
+++ b/src/assets/stylesheets/components/_footer.scss
@@ -8,6 +8,7 @@ footer {
     margin: 0;
     padding: 0;
   }
+
   .social-links ul li {
     margin-left: 20px;
   }
@@ -36,8 +37,7 @@ footer {
 .social-links {
   align-items: center;
   flex-shrink: 0;
-  margin-top: 10px;
-  margin-right: 64px;
+  margin-top: 35px;
 }
 
 .footer-logo {
